# fullstack-template

./: .gitignore  README.md
ansible/: Caddyfile  deploy.yaml  initial-setup.yaml  todo-project-name.service
backend/: pyproject.toml
backend/todo_project_name/: main.py
backend/todo_project_name/db/: utils.py
backend/todo_project_name/graphql/: schema.py
frontend/: .gitignore  .parcelrc  package.json  tsconfig.json
frontend/src/: index.html  index.tsx  types.d.ts
frontend/src/components/: page.tsx
frontend/src/routes/: homepage.tsx  other.tsx  root.tsx
frontend/src/static/: coffee-machine.stl
frontend/src/styles/: global.scss  root.module.scss
scripts/: deploy.sh  dev-backend.sh  dev-frontend.sh  setup.sh
